update libs.css fix certain elements blocked on mobile due to toasts container taking up unnecessary space

--- a/api/libs.css
+++ b/api/libs.css
@@ -2,13 +2,15 @@
     position: absolute;
     bottom: 12.5px;
     right: 0px;
-    height: calc(100% - 42.5px);
-    width: 250px;
+    max-height: calc(100% - 42.5px);
+    max-width: 250px;
+    height: min-content;
     display: flex;
     flex-direction: row-reverse;
     padding: 0;
     margin: 0;
     align-items: center;
+    overflow: hidden;
     flex-wrap: wrap;
     align-content: flex-end;
     gap: 10px;
